--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -10,16 +10,15 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-
+{% seo %}
+    {% include head-custom.html %}
+  </head>
 
   <body>
     <div id="container">
       <div class="inner">
 
-        <header>
-          <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
-          <h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-        </header>
+
         <section id="downloads" class="clearfix">
           {% if site.show_downloads %}
           <a href="{{ site.github.zip_url }}" id="download-zip" class="button"><span>Download .zip</span></a>
@@ -49,3 +48,4 @@
     </div>
   </body>
 </html>
+
